<resources>
    <string name="app_name">Shift Optimizer</string>
    <string name="rpm">Current RPM:</string>
    <string name="speed">Current Speed -</string>
    <string name="throttle">Throttle Position:</string>
    <string name="temp">Temperature -</string>
    <string name="eco">Fuel Economy -</string>
    <string name="accl">Acceleration:</string>
    <string name="stat">Shift Status</string>
</resources>
