<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.map524.mattrajevski.shiftoptimizer.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="361dp"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rpm"
                    android:textSize="36sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/RPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:text="0000"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toRightOf="@+id/t1"
                    app:layout_constraintTop_toTopOf="@+id/t1" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accl"
                    android:textSize="36sp"
                    android:layout_marginTop="34dp"
                    app:layout_constraintTop_toBottomOf="@+id/t1"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/acceleration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="0m/s&#178;"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toRightOf="@+id/t2"
                    app:layout_constraintTop_toTopOf="@+id/t2" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="161dp"
                    android:layout_height="79dp"
                    android:text="@string/throttle"
                    android:textSize="36sp"
                    android:layout_marginTop="34dp"
                    app:layout_constraintTop_toBottomOf="@+id/t2"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/throttle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:textSize="48sp"
                    app:layout_constraintLeft_toRightOf="@+id/t3"
                    android:layout_marginLeft="51dp"
                    app:layout_constraintTop_toTopOf="@+id/t3"
                    android:layout_marginTop="11dp" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat"
                    android:textSize="36sp"
                    android:layout_marginTop="34dp"
                    app:layout_constraintTop_toBottomOf="@+id/t3"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <ImageView
                    android:id="@+id/status"
                    android:layout_width="84dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="0dp"
                    android:background="@android:color/background_dark"
                    android:padding="1dp"
                    app:layout_constraintLeft_toRightOf="@+id/t4"
                    app:layout_constraintTop_toTopOf="@+id/t4"
                    app:srcCompat="@android:color/white"
                    tools:ignore="ContentDescription" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Connect"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="274dp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/speed"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="0kM/h"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toRightOf="@+id/t5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/t7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/temp"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t5" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="-3dp"
                    android:text="0&#176;C"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toRightOf="@+id/t7"
                    app:layout_constraintTop_toTopOf="@+id/t7" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
